--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'interviewmaster'
+      - 'talentiq'
       - '--image'
       - 'gcr.io/$PROJECT_ID/talentiq:$COMMIT_SHA'
       - '--region'
@@ -27,35 +27,8 @@ steps:
       - '1Gi'
       - '--cpu'
       - '1'
-      - '--min-instances'
-      - '0'
       - '--max-instances'
       - '10'
-      - '--concurrency'
-      - '1000'
-      - '--timeout'
-      - '300'
-      - '--set-env-vars'
-      - 'FLASK_ENV=production,PYTHONUNBUFFERED=1,SESSION_SECRET=talentiq-secure-session-key-2024'
-      - '--set-cloudsql-instances'
-      - 'talentiq-platform:us-central1:talentiq-db'
-      - '--execution-environment'
-      - 'gen2'
 
-# Substitute variables for image tagging
-substitutions:
-  _SERVICE_NAME: 'talentiq'
-  _REGION: 'us-central1'
-
-# Build timeout
-timeout: '1200s'
-
-# Images to push to registry
 images:
   - 'gcr.io/$PROJECT_ID/talentiq:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/talentiq:latest'
-
-# Build options
-options:
-  logging: CLOUD_LOGGING_ONLY
-  machineType: 'E2_HIGHCPU_8'
